# AudioVisualizer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/shaders/: ring.frag  ring.vert  sphere.frag  sphere.vert  wavebar.frag  wavebar.vert
database/: audiodb.json
include/UI/: ImguiLayer.h  Window.h
include/UI/panels/: AudioLibraryPanel.h  AudioPlayPanel.h  ViewportPanel.h
include/audio/: AudioAnalyzer.h  AudioCapture.h  AudioManager.h  FFTProcessor.h
include/resources/: Mesh.h  ResourceManager.h
include/utils/: FileLoader.h  ObjLoader.h  Paths.h  TextureLoader.h  Timer.h
include/visualizer/: RenderPipeline.h  Renderer.h  RingRenderer.h  SphereMeshRenderer.h  WaveBarRenderer.h
include/visualizer/framebuffers/: Framebuffer.h
include/visualizer/opengl/: GLSLProgram.h
src/UI/: ImguiLayer.cpp  Window.cpp
src/UI/panels/: AudioLibraryPanel.cpp  AudioPlayPanel.cpp  ViewportPanel.cpp
src/audio/: AudioAnalyzer.cpp  AudioCapture.cpp  AudioManager.cpp  FFTProcessor.cpp
src/resources/: Mesh.cpp
src/visualizer/: RenderPipeline.cpp  RingRenderer.cpp  SphereMeshRenderer.cpp  WaveBarRenderer.cpp
src/visualizer/framebuffers/: Framebuffer.cpp
src/visualizer/opengl/: GLSLProgram.cpp
